@@ -11,6 +11,7 @@
 package org.eclipse.rdf4j.queryrender.sparql.ir;
 
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
@@ -31,15 +32,15 @@ public class IrPathTriple extends IrTripleLike {
 	private final String pathText;
 	private Set<Var> pathVars; // vars that were part of the path before fusing (e.g., anon bridge vars)
 
-	public IrPathTriple(Var subject, String pathText, Var object, boolean newScope) {
-		this(subject, null, pathText, object, null, newScope);
+	public IrPathTriple(Var subject, String pathText, Var object, boolean newScope, Set<Var> pathVars) {
+		this(subject, null, pathText, object, null, pathVars, newScope);
 	}
 
 	public IrPathTriple(Var subject, IrNode subjectOverride, String pathText, Var object, IrNode objectOverride,
-			boolean newScope) {
+						Set<Var> pathVars, boolean newScope) {
 		super(subject, subjectOverride, object, objectOverride, newScope);
 		this.pathText = pathText;
-		this.pathVars = Collections.emptySet();
+		this.pathVars = Set.copyOf(pathVars);
 	}
 
 	public String getPathText() {
@@ -58,11 +59,65 @@ public class IrPathTriple extends IrTripleLike {
 
 	/** Assign the set of variables that contributed to this path during fusing. */
 	public void setPathVars(Set<Var> vars) {
-		if (vars == null || vars.isEmpty()) {
+		if (vars.isEmpty()) {
 			this.pathVars = Collections.emptySet();
 		} else {
-			this.pathVars = Collections.unmodifiableSet(new HashSet<>(vars));
+			this.pathVars = Set.copyOf(vars);
 		}
+	}
+
+	/** Merge pathVars from 2+ IrPathTriples into a new unmodifiable set. */
+	public static Set<Var> mergePathVars(IrPathTriple... pts) {
+		if (pts == null || pts.length == 0) {
+			return Collections.emptySet();
+		}
+		HashSet<Var> out = new HashSet<>();
+		for (IrPathTriple pt : pts) {
+			if (pt == null) continue;
+			if (pt.getPathVars() != null) out.addAll(pt.getPathVars());
+		}
+		return out.isEmpty() ? Collections.emptySet() : Collections.unmodifiableSet(out);
+	}
+
+	/** Merge pathVars from a collection of IrPathTriples. */
+	public static Set<Var> mergePathVars(Collection<IrPathTriple> pts) {
+		if (pts == null || pts.isEmpty()) {
+			return Collections.emptySet();
+		}
+		HashSet<Var> out = new HashSet<>();
+		for (IrPathTriple pt : pts) {
+			if (pt == null) continue;
+			if (pt.getPathVars() != null) out.addAll(pt.getPathVars());
+		}
+		return out.isEmpty() ? Collections.emptySet() : Collections.unmodifiableSet(out);
+	}
+
+	/**
+	 * Create a set of pathVars from one or more IrStatementPattern by collecting any parser bridge variables
+	 * (subject/object with names starting with _anon_path_ or _anon_path_inverse_) and anonymous predicate vars.
+	 */
+	public static Set<Var> fromStatementPatterns(IrStatementPattern... sps) {
+		if (sps == null || sps.length == 0) {
+			return Collections.emptySet();
+		}
+		HashSet<Var> out = new HashSet<>();
+		for (IrStatementPattern sp : sps) {
+			if (sp == null) continue;
+			Var s = sp.getSubject();
+			Var o = sp.getObject();
+			Var p = sp.getPredicate();
+			if (isAnonBridgeVar(s)) out.add(s);
+			if (isAnonBridgeVar(o)) out.add(o);
+			if (isAnonBridgeVar(p)) out.add(p);
+		}
+		return out.isEmpty() ? Collections.emptySet() : Collections.unmodifiableSet(out);
+	}
+
+	private static boolean isAnonBridgeVar(Var v) {
+		if (v == null || v.getName() == null) return false;
+		// parser-generated path bridge variables
+		String n = v.getName();
+		return n.startsWith("_anon_path_") || n.startsWith("_anon_path_inverse_");
 	}
 
 	@Override
